--- a/app/src/main/res/layout/luisterlijst.xml
+++ b/app/src/main/res/layout/luisterlijst.xml
@@ -75,18 +75,6 @@
             app:layout_constraintBottom_toTopOf="@+id/btn_play"
             tools:text="0-0"
             />
-    <ImageView
-            android:id="@+id/img_thatsall"
-            android:layout_width="344dp"
-            android:layout_height="166dp"
-            android:layout_marginTop="16dp"
-            android:contentDescription="@string/thatsall"
-            android:visibility="invisible"
-            app:layout_constraintTop_toBottomOf="@+id/txt_meaning"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/thatsall"
-            />
     <Button
             android:id="@+id/btn_rewind"
             android:layout_width="88dp"
@@ -102,11 +90,11 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:max="20"
+            android:max="15"
             android:min="5"
             android:progress="10"
-            app:layout_constraintStart_toEndOf="@+id/lbl_speed"
             app:layout_constraintBottom_toTopOf="@+id/txt_blockpos"
+            app:layout_constraintStart_toEndOf="@+id/lbl_speed"
             />
     <TextView
             android:id="@+id/lbl_speed"
@@ -125,5 +113,33 @@
             android:textSize="18sp"
             app:layout_constraintStart_toEndOf="@+id/sb_speed"
             app:layout_constraintBottom_toBottomOf="@+id/sb_speed"
+            />
+    <TextView
+            android:id="@+id/farfarAway"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:gravity="center_horizontal"
+            android:scrollbars="vertical"
+            android:textColor="#5230FE"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toTopOf="@+id/sb_speed"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_meaning"
+            />
+    <ImageView
+            android:id="@+id/img_thatsall"
+            android:layout_width="126dp"
+            android:layout_height="58dp"
+            android:layout_marginBottom="16dp"
+            android:contentDescription="@string/thatsall"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@+id/sb_speed"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_meaning"
+            app:srcCompat="@drawable/thatsall"
             />
 </androidx.constraintlayout.widget.ConstraintLayout>
